syntax = "proto3";

package io.restorecommerce.product;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/image.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/attribute.proto";
import "io/restorecommerce/options.proto";

// Used by resolvers
import "io/restorecommerce/manufacturer.proto";

service Service {
  option (io.restorecommerce.options.service_name) = "product";

  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (ProductListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (ProductList) returns (ProductListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (ProductList) returns (ProductListResponse);
  rpc Upsert (ProductList) returns (ProductListResponse);
}

// Product resource
message MainProduct {
  optional string id = 1;
  oneof product_type {
    Product product = 2;
    Bundle bundle = 3;
  }
  optional bool active = 4;
  optional io.restorecommerce.meta.Meta meta = 5;
}

message Product {
  optional string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string manufacturer_id = 4 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.manufacturer.Manufacturer",
      target_service: "catalog",
      target_sub_service: "manufacturer",
      target_method: "Read",
      field_name: "manufacturer",
    }
  ];
  optional string taric_code = 5;
  oneof classification {
    Identifier prototype = 6;
    Identifier category = 7;
  }
  repeated string tax_id = 8;
  repeated Variant variants = 9;
  optional string gtin = 10;
}

message Identifier {
  string id = 1;
}

message ProductList {
  repeated MainProduct items = 1;
  optional uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message ProductListResponse {
  repeated ProductResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ProductResponse {
  MainProduct payload = 1;
  io.restorecommerce.status.Status status = 3;
}

message Variant {
  optional string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional int32 stock_level = 4;
  optional double price = 5;
  optional bool sale = 6;
  optional double sale_price = 7;
  repeated io.restorecommerce.image.Image image = 8;
  optional string stock_keeping_unit = 9;
  optional string template_variant = 10;
  repeated io.restorecommerce.attribute.Attribute attributes = 11;
}

message Bundle {
  optional string id = 1;
  optional string name = 3;
  optional string description = 4;
  repeated io.restorecommerce.image.Image image = 5;
  repeated BundleProduct product = 6;
  optional double price = 7;
}

message BundleProduct {
  optional string product_id = 1;
  optional uint32 quantity = 2;
}

message Deleted {
  string id = 1;
}
