syntax = "proto3";

package io.restorecommerce.product_category;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/image.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";

// ProductCategory resource
message ProductCategory {
  string id = 1;
  io.restorecommerce.meta.Meta meta = 2;
  string name = 3;
  string description = 4;
  string price_group_id = 5;
  io.restorecommerce.image.Image image = 6;
  Parent parent = 7;
}

message ProductCategoryList {
  repeated ProductCategory items = 1;
  uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message ProductCategoryListResponse {
  repeated ProductCategoryResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ProductCategoryResponse {
  ProductCategory payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message Deleted {
  string id = 1;
}

message Parent {
  string parent_id = 1;
}

service Service {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (ProductCategoryListResponse);
  rpc Create (ProductCategoryList) returns (ProductCategoryListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (ProductCategoryList) returns (ProductCategoryListResponse);
  rpc Upsert (ProductCategoryList) returns (ProductCategoryListResponse);
}
